--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest package="com.chenantao.main"
           xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -15,6 +16,12 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name="com.chenantao.QQselectView.SelectViewActivity"/>
+        <activity android:name="com.chenantao.stackLayout.StackLayoutActivity"/>
+        <activity android:name="com.chenantao.JdselectAddressView.JDSelectAddressActivity"/>
+
+
+        <service android:name="com.chenantao.qqRocket.QQRocketService"/>
     </application>
 
 </manifest>
